--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,16 +3,37 @@
 # Please see the documentation for all configuration options:
 # https://help.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
 
-version: 2
-updates:
-  - package-ecosystem: npm
-    directory: /
-    schedule:
-      interval: monthly
-    allow:
-      - dependency-type: production
+name: deploy vue
+on:
+    push:
+        branches:
+            - master
 
-  - package-ecosystem: github-actions
-    directory: .github/workflows
-    schedule:
-      interval: monthly
+jobs:
+    deploy-app:
+        runs-on: ubuntu-latest
+        steps:
+            - name: check out the code to build server
+              uses: actions/checkout@v3
+            - uses: pnpm/action-setup@v2.2.4
+              with:
+                version: 7
+                run_install: false
+            - name: Use Node.js 18.x
+              uses: actions/setup-node@v3
+              with:
+                node-version: 18.x
+                cache: 'pnpm'
+            - name: build the code
+              run: |
+                pnpm install --no-frozen-lockfile
+                pnpm build
+            - name: copy file to server
+              uses: appleboy/scp-action@master
+              with:
+                host: ${{secrets.HOST}}
+                username: ${{secrets.SSH_USER_NAME}}
+                key: ${{secrets.SSH_KEY}}
+                source: "./dist/*"
+                target: "/var/www/html"
+                strip_components: 1
